Changed how selected vocab count is stored
The selected vocab count would previously be stored as 'Infinity' when set to 'All', which isn't supported by JSON and caused issues. It will now be stored as '0' instead.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <center id="select-unit"><h1>Lade...</h1></center>
             <center id="select-tests">
                 <h2>Anzahl der Vokabeln</h2>
-                <button class="count" onclick="selectCount(5)">5</button><button class="count" onclick="selectCount(10)">10</button><button class="count" onclick="selectCount(15)">15</button><button class="count" onclick="selectCount(20)">20</button><button class="count" onclick="selectCount(25)">25</button><button class="count" onclick="selectCount(Infinity)">Alle</button>
+                <button class="count" onclick="selectCount(5)">5</button><button class="count" onclick="selectCount(10)">10</button><button class="count" onclick="selectCount(15)">15</button><button class="count" onclick="selectCount(20)">20</button><button class="count" onclick="selectCount(25)">25</button><button class="count" onclick="selectCount(0)">Alle</button>
                 <h2>Übungen</h2>
                 <button class="test" onclick="toggleTest(this.innerText);">Auswählen</button>
                 <!--<button class="test" onclick="toggleTest(this.innerText);">Kombinieren</button>-->
